5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1602_1015.log
== TEST (2019-03-23 14:17:18) 
-- CODE:
int(input("ordem crescente"))
-- OUTPUT:
54.230000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:17:47) 
-- CODE:
int(input("x, y, z"))
-- OUTPUT:
54.230000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:18:16) 
-- CODE:
int(input("x, y, z"))
min(x, y, z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(x, y, z)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:18:33) 
-- CODE:
int(input("x, y, z"))
min(x, y, z)
max(x, y, z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(x, y, z)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:21:09) 
-- CODE:
int(input("x, y, z"))
min(x, y, z)
max(x, y, z)
var = x+y+z-z-x
print(z,y,x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(x, y, z)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:21:13) 
-- CODE:
int(input("x, y, z"))
min(x, y, z)
max(x, y, z)
var = x+y+z-z-x
print(z,y,x)
-- EXECUTION TIME:
0.137139
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 2, in <module>
    min(x, y, z)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:22:59) 
-- CODE:
var = int(input("a, b, c"))
min(a, b, c)
max(a, b, c)
print(z,y,x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:25:06) 
-- CODE:
var = int(input("a, b, c"))
min(a, b, c)
max(a, b, c)
print(c,b,a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:25:11) 
-- CODE:
var = int(input("a, b, c"))
min(a, b, c)
max(a, b, c)
print(c,b,a)
-- EXECUTION TIME:
0.136461
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 08:53:30) 
-- CODE:
var = int(input("a, b, c"))
min(a, b, c)
max(a, b, c)
print(c,b,a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 08:53:36) 
-- CODE:
var = int(input("a, b, c"))
min(a, b, c)
max(a, b, c)
print(c,b,a)
-- EXECUTION TIME:
0.286841
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 08:54:56) 
-- CODE:
var = int(input("a, b, c"))
min(a, b, c)
max(a, b, c)
a+b+c-a-c = b
print(c,b,a)
-- ERROR:
File "XXXX", line 4
    a+b+c-a-c = b
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 08:55:07) 
-- CODE:
var = int(input("a, b, c"))
min(a, b, c)
max(a, b, c)
a+b+c-a-c
print(c,b,a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 08:55:43) 
-- CODE:
int(input("a, b, c"))
min(a, b, c)
max(a, b, c)
a+b+c-a-c
print(c,b,a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 08:56:16) 
-- CODE:
int(input("odem crescente"))
min(a, b, c)
max(a, b, c)
a+b+c-a-c
print(c,b,a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 08:56:21) 
-- CODE:
int(input("odem crescente"))
min(a, b, c)
max(a, b, c)
a+b+c-a-c
print(c,b,a)
-- EXECUTION TIME:
0.113639
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 08:57:23) 
-- CODE:
int(input("odem crescente"))
min(a, b, c)
max(a, b, c)
a+b+c-a-c
print(c,b,a)
-- EXECUTION TIME:
0.127463
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 08:58:46) 
-- CODE:
var = int(input("a, b, c"))
min(a, b, c)
max(a, b, c)
a+b+c-a-c
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 08:58:52) 
-- CODE:
var = int(input("a, b, c"))
min(a, b, c)
max(a, b, c)
a+b+c-a-c
print(var)
-- EXECUTION TIME:
0.136221
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 08:59:12) 
-- CODE:
var = int(input("ordem crescente"))
min(a, b, c)
max(a, b, c)
a+b+c-a-c
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 08:59:16) 
-- CODE:
var = int(input("ordem crescente"))
min(a, b, c)
max(a, b, c)
a+b+c-a-c
print(var)
-- EXECUTION TIME:
0.143306
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:01:57) 
-- CODE:
var = int(input("a,b,c"))
min(a, b, c)
max(a, b, c)
valor intermediario = a+b+c-a-c
print(c,b,a)
-- ERROR:
File "XXXX", line 4
    valor intermediario = a+b+c-a-c
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:04:24) 
-- CODE:
var1 = int(input("a"))
var2 = int(input("b"))
var3 = int(input("c"))
min(a, b, c)
max(a, b, c)
var1 + var2 + var3 - var1 - var3
print(c,b,a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    min(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:04:38) 
-- CODE:
var1 = int(input("a"))
var2 = int(input("b"))
var3 = int(input("c"))
min(a, b, c)
max(a, b, c)
var1 + var2 + var3 - var1 - var3
print(c,b,a)
-- EXECUTION TIME:
0.1798
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 4, in <module>
    min(a, b, c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:05:06) 
-- CODE:
var1 = int(input("a"))
var2 = int(input("b"))
var3 = int(input("c"))
min(a, b, c)
max(a, b, c)
var1 + var2 + var3 - var1 - var3
print(var3,var2,var1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    min(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:05:10) 
-- CODE:
var1 = int(input("a"))
var2 = int(input("b"))
var3 = int(input("c"))
min(a, b, c)
max(a, b, c)
var1 + var2 + var3 - var1 - var3
print(var3,var2,var1)
-- EXECUTION TIME:
0.133535
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 4, in <module>
    min(a, b, c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:05:15) 
-- CODE:
var1 = int(input("a"))
var2 = int(input("b"))
var3 = int(input("c"))
min(a, b, c)
max(a, b, c)
var1 + var2 + var3 - var1 - var3
print(var3,var2,var1)
-- EXECUTION TIME:
0.14221
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 4, in <module>
    min(a, b, c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:06:54) 
-- CODE:
var1 = int(input("a"))
var2 = int(input("b"))
var3 = int(input("c"))
min(a, b, c)
max(a, b, c)
var1 + var2 + var3 - var1 - var2
print(var2,var3,var1)
-- EXECUTION TIME:
0.116171
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 4, in <module>
    min(a, b, c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:06:58) 
-- CODE:
var1 = int(input("a"))
var2 = int(input("b"))
var3 = int(input("c"))
min(a, b, c)
max(a, b, c)
var1 + var2 + var3 - var1 - var2
print(var2,var3,var1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    min(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:07:03) 
-- CODE:
var1 = int(input("a"))
var2 = int(input("b"))
var3 = int(input("c"))
min(a, b, c)
max(a, b, c)
var1 + var2 + var3 - var1 - var2
print(var2,var3,var1)
-- EXECUTION TIME:
0.199944
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 4, in <module>
    min(a, b, c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:08:45) 
-- CODE:
int(input("a,b,c"))
min(a, b, c)
max(a, b, c)
a+b+c-a-b
print(b,c,a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:08:51) 
-- CODE:
int(input("a,b,c"))
min(a, b, c)
max(a, b, c)
a+b+c-a-b
print(b,c,a)
-- EXECUTION TIME:
0.115058
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:09:09) 
-- CODE:
int(input("a,b,c"))
min(a, b, c)
max(a, b, c)
a+b+c-a-b
print(a,b,c,)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:09:13) 
-- CODE:
int(input("a,b,c"))
min(a, b, c)
max(a, b, c)
a+b+c-a-b
print(a,b,c,)
-- EXECUTION TIME:
0.129459
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:09:39) 
-- CODE:
int(input("oedem crescente"))
min(a, b, c)
max(a, b, c)
a+b+c-a-b
print(a,b,c,)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:11:11) 
-- CODE:
int(input("6,2,4"))
min(6, 2, 4)
max(6, 2, 4)
6+2+4-6-2
print(a,b,c,)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(a,b,c,)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:11:44) 
-- CODE:
int(input("6,2,4"))
min(6, 2, 4)
max(6, 2, 4)
6+2+4-6-2
print(b,c,a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(b,c,a)
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:11:50) 
-- CODE:
int(input("6,2,4"))
min(6, 2, 4)
max(6, 2, 4)
6+2+4-6-2
print(b,c,a)
-- EXECUTION TIME:
0.199046
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 5, in <module>
    print(b,c,a)
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:12:06) 
-- CODE:
int(input("6,2,4"))
min(6, 2, 4)
max(6, 2, 4)
6+2+4-6-2
print(2,4,6)
-- OUTPUT:
2 4 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:12:11) 
-- CODE:
int(input("6,2,4"))
min(6, 2, 4)
max(6, 2, 4)
6+2+4-6-2
print(2,4,6)
-- EXECUTION TIME:
0.148358
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
2 4 6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:20:14) 
-- CODE:
int(input("6,2,4"))
min(6, 2, 4)
max(6, 2, 4)
6+2+4-6-2
print(2,4,6)
-- OUTPUT:
2 4 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:20:35) 
-- CODE:
int(input("2,4,6"))
min(6, 2, 4)
max(6, 2, 4)
6+2+4-6-2
print(2,4,6)
-- EXECUTION TIME:
0.14291
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
2 4 6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:20:39) 
-- CODE:
int(input("2,4,6"))
min(6, 2, 4)
max(6, 2, 4)
6+2+4-6-2
print(2,4,6)
-- OUTPUT:
2 4 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:20:45) 
-- CODE:
int(input("2,4,6"))
min(6, 2, 4)
max(6, 2, 4)
6+2+4-6-2
print(2,4,6)
-- EXECUTION TIME:
0.187542
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
2 4 6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:50:38) 
-- CODE:
int(input("a,b,c"))
min(a,b,c)
max(a,b,c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a,b,c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:52:07) 
-- CODE:
int(input("a,b,c"))
min(a,b,c)
max(a,b,c)
b = a+b+c-a-b
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a,b,c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:52:34) 
-- CODE:
int(input("a,b,c"))
min(a,b,c)
max(a,b,c)
b = a+b+c-a-b
print(b,c,a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a,b,c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:52:38) 
-- CODE:
int(input("a,b,c"))
min(a,b,c)
max(a,b,c)
b = a+b+c-a-b
print(b,c,a)
-- EXECUTION TIME:
0.179851
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 2, in <module>
    min(a,b,c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:07:51) 
-- CODE:
int(input("a, b, c")
-- ERROR:
File "XXXX", line 2
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:08:16) 
-- CODE:
int(input("a, b, c"))
-- ERROR:
File "XXXX", line 2
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:10:52) 
-- CODE:
int(input("a, b, c"))
min(a, b, c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:11:12) 
-- CODE:
int(input("a, b, c"))
print(min(a, b, c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(min(a, b, c))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:11:12) 
-- CODE:
int(input("a, b, c"))
print(min(a, b, c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(min(a, b, c))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:11:25) 
-- CODE:
int(input("a, b, c"))
print(min(a, b, c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(min(a, b, c))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:12:26) 
-- CODE:
int(input("a, b, c"))
print(min(a, b, c))
print(max(a, b, c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(min(a, b, c))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:13:38) 
-- CODE:
int(input("a, b, c"))
print(min(a, b, c))
print(max(a, b, c))
a+b+c-a-b
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(min(a, b, c))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:15:29) 
-- CODE:
int(input("a, b, c"))
(min(a, b, c)
(max(a, b, c)
a+b+c-a-b
print
-- ERROR:
File "XXXX", line 4
    a+b+c-a-b
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:16:28) 
-- CODE:
int(input("a, b, c"))
(min(a, b, c)
(max(a, b, c)
b = b
print
-- ERROR:
File "XXXX", line 4
    b = b
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:32:32) 
-- CODE:
int(input("a, b, c"))
min(a, b, c)
max(a, b, c)
intermediario = a+b+c-a-b
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:33:11) 
-- CODE:
int(input("a, b, c"))
min(a, b, c)
max(a, b, c)
intermediario = a+b+c-a-b
print(min,internediario,max)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:33:14) 
-- CODE:
int(input("a, b, c"))
min(a, b, c)
max(a, b, c)
intermediario = a+b+c-a-b
print(min,internediario,max)
-- EXECUTION TIME:
0.214058
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 2, in <module>
    min(a, b, c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:10:29) 
-- CODE:

max(a, b, c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    max(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:10:35) 
-- CODE:

max(a, b, c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    max(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:11:52) 
-- CODE:
a = 6
b = 2
c = 4
int(input("a, b, c"))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    max(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:12:09) 
-- CODE:
a = 6
b = 2
c = 4
int(input("a, b, c"))
min(a,b,c)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    max(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:12:27) 
-- CODE:
a = 6
b = 2
c = 4

min(a,b,c)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    max(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:12:30) 
-- CODE:
a = 6
b = 2
c = 4

min(a,b,c)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    max(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:12:35) 
-- CODE:
a = 6
b = 2
c = 4

min(a,b,c)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    max(a, b, c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:13:37) 
-- CODE:
a = 6
b = 2
c = 4
int(input("a, b, c"))
min(a,b,c)
max(a,b,c)
print(b, c, a)
-- OUTPUT:
2 4 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:13:44) 
-- CODE:
a = 6
b = 2
c = 4
int(input("a, b, c"))
min(a,b,c)
max(a,b,c)
print(b, c, a)
-- EXECUTION TIME:
0.117252
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
2 4 6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:15:16) 
-- CODE:
a = 6
b = 2
c = 4
int(input("a, b, c"))
min(a,b,c)
max(a,b,c)
inter = a+b+c-a-c
print(min,inter , max)
-- OUTPUT:
<built-in function min> 2 <built-in function max>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:15:21) 
-- CODE:
a = 6
b = 2
c = 4
int(input("a, b, c"))
min(a,b,c)
max(a,b,c)
inter = a+b+c-a-c
print(min,inter , max)
-- EXECUTION TIME:
0.200735
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
<built-in function min> 2 <built-in function max>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:17:25) 
-- CODE:
a = 6
b = 2
c = 4
int(input("a, b, c"))
print(min(a,b,c))
print(max(a,b,c))
inter = a+b+c-a-c
print(min,inter , max)
-- OUTPUT:
2
6
<built-in function min> 2 <built-in function max>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:18:48) 
-- CODE:
a = 6
b = 2
c = 4
int(input("a, b, c"))
min(a,b,c)
max(a,b,c)
print(min(intermediario(max(a,b,c))))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(min(intermediario(max(a,b,c))))
NameError: name 'intermediario' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:18:57) 
-- CODE:
a = 6
b = 2
c = 4
int(input("a, b, c"))
min(a,b,c)
max(a,b,c)
print(min(intermediario(max(a,b,c))))
-- EXECUTION TIME:
0.209593
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 7, in <module>
    print(min(intermediario(max(a,b,c))))
NameError: name 'intermediario' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:19:00) 
-- CODE:
a = 6
b = 2
c = 4
int(input("a, b, c"))
min(a,b,c)
max(a,b,c)
print(min(intermediario(max(a,b,c))))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(min(intermediario(max(a,b,c))))
NameError: name 'intermediario' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:24:45) 
-- CODE:
a = 6
b = 2
c = 4
int(input("a, b, c"))
print(min(a,b,c))
print(max(a,b,c))
print(min(intermediario(max(a,b,c))))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(min(intermediario(max(a,b,c))))
NameError: name 'intermediario' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:25:31) 
-- CODE:
a = 6
b = 2
c = 4
int(input("a, b, c"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(min(intermediario(max(a,b,c))))
NameError: name 'intermediario' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:31:09) 
-- CODE:
a = 6
b = 2
c = 4
int(input("a, b, c"))
min(a,b,c)
max(a,b,c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(min(intermediario(max(a,b,c))))
NameError: name 'intermediario' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:32:11) 
-- CODE:
a = 6
b = 2
c = 4
int(input("a, b, c"))
min(a,b,c)
max(a,b,c)
a+b+c-a-c

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(min(intermediario(max(a,b,c))))
NameError: name 'intermediario' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:32:28) 
-- CODE:
a = 6
b = 2
c = 4
int(input("a, b, c"))
min(a,b,c)
max(a,b,c)
meio = a+b+c-a-c

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(min(intermediario(max(a,b,c))))
NameError: name 'intermediario' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:33:05) 
-- CODE:
a = 6
b = 2
c = 4
int(input("a, b, c"))
min(a,b,c)
max(a,b,c)
meio = a+b+c-a-c
print(min,meio,max)
-- OUTPUT:
<built-in function min> 2 <built-in function max>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:33:12) 
-- CODE:
a = 6
b = 2
c = 4
int(input("a, b, c"))
min(a,b,c)
max(a,b,c)
meio = a+b+c-a-c
print(min,meio,max)
-- EXECUTION TIME:
0.134076
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
<built-in function min> 2 <built-in function max>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:34:01) 
-- CODE:
int(input("6, 2, 4"))
min(6,2,4)
max(a,b,c)
meio = a+b+c-a-c
print(min,meio,max)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    max(a,b,c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:34:45) 
-- CODE:
int(input("6, 2, 4"))
print(min(6,2,4))
print(max(6,2,4))
meio = a+b+c-a-c
print(min,meio,max)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    meio = a+b+c-a-c
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:35:34) 
-- CODE:
int(input("6, 2, 4"))
a = (min(6,2,4))
print(max(6,2,4))
meio = 
print(min,meio,max)
-- ERROR:
File "XXXX", line 4
    meio = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:36:57) 
-- CODE:
int(input("6, 2, 4"))
a = min(6,2,4)
c = max(6,2,4)
b = a+b+c-a-c
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    b = a+b+c-a-c
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:37:42) 
-- CODE:
int(input("6, 2, 4"))
a = min(6,2,4)
c = max(6,2,4)
b = a+b+c-a-c
print(a,b,c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    b = a+b+c-a-c
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:37:46) 
-- CODE:
int(input("6, 2, 4"))
a = min(6,2,4)
c = max(6,2,4)
b = a+b+c-a-c
print(a,b,c)
-- EXECUTION TIME:
0.127425
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 4, in <module>
    b = a+b+c-a-c
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:41:44) 
-- CODE:
int(input(a,b,c))
min(a,b,c)
min(a,b,c)
intermediario = (a+b+c)+(-a-c)
pint(min(a,b,c),intermediario,max(a,b,c))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(a,b,c))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:42:59) 
-- CODE:
int(input("a,b,c"))
min(a,b,c)
min(a,b,c)
intermediario = (a+b+c)+(-a-c)
pint(min(a,b,c),intermediario,max(a,b,c))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a,b,c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:43:04) 
-- CODE:
int(input("a,b,c"))
min(a,b,c)
min(a,b,c)
intermediario = (a+b+c)+(-a-c)
pint(min(a,b,c),intermediario,max(a,b,c))

-- EXECUTION TIME:
0.164806
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 2, in <module>
    min(a,b,c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:43:17) 
-- CODE:
int(input("a,b,c"))
min(a,b,c)
min(a,b,c)
intermediario = (a+b+c)+(-a-c)
print(min(a,b,c),intermediario,max(a,b,c))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a,b,c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:43:22) 
-- CODE:
int(input("a,b,c"))
min(a,b,c)
min(a,b,c)
intermediario = (a+b+c)+(-a-c)
print(min(a,b,c),intermediario,max(a,b,c))

-- EXECUTION TIME:
0.19301
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 2, in <module>
    min(a,b,c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:44:13) 
-- CODE:
a = 6
b = 2
c = 4
int(input("a,b,c"))
min(a,b,c)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    min(a,b,c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:44:37) 
-- CODE:
a = 6
b = 2
c = 4
print(min(a,b,c))



-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:44:57) 
-- CODE:
a = 6
b = 2
c = 4
int(input("a,b,c"))
print(min(a,b,c))



-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:45:42) 
-- CODE:
a =int(input("6")) 
b = 2
c = 4
int(input("a,b,c"))
print(min(a,b,c))



-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:46:36) 
-- CODE:
a = int(input("6")) 
b = int(input("2")
c = int(input("4")
print(min(a,b,c))



-- ERROR:
File "XXXX", line 3
    c = int(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:46:50) 
-- CODE:
a = int(input("6")) 
b = int(input("2"))
c = int(input("4"))
print(min(a,b,c))



-- OUTPUT:
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:47:24) 
-- CODE:
a = int(input("6")) 
b = int(input("2"))
c = int(input("4"))
print(min(a,b,c))
print(max(a,b,c))



-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:48:22) 
-- CODE:
a = int(input("6")) 
b = int(input("2"))
c = int(input("4"))
print(min(a,b,c))
print(max(a,b,c))
intermediario = a+b+c-a-c
print()
-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:48:39) 
-- CODE:
a = int(input("6,2,4")) 
b = int(input("2"))
c = int(input("4"))
print(min(a,b,c))
print(max(a,b,c))
intermediario = a+b+c-a-c
print()
-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:57:29) 
-- CODE:
n1 = input('Digite o 1° numero: ')
n2 = input('Digite o 2° numero: ')
n3 = input('Digite o 3° numero: ')

if n1 > n2 and n1 >n3:
    print n1
elif n2 > n3 and n2 > n1:
    print n2
elif n3 > n1 and n3 > n2:
    print n3

#agora o numero do meio        
if n1 > n3 and n1 < n2:     print n1 elif n2 > n1 and n2 < n3:     print n2 elif n3 > n2 and n3 > n1:
    print n3
elif n2 < n1 and n2 > n3:
    print n2

if n1 < n2 and n1 < n3:
    print n1
elif n2 < n3 and n2 < n1:
    print n2
elif n3 < n1 and n3 < n2:
    print n3
-- ERROR:
File "XXXX", line 6
    print n1
           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(n1)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:58:36) 
-- CODE:
n1 = int("6:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int("6:")
ValueError: invalid literal for int() with base 10: '6:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:58:47) 
-- CODE:
n1 = int("6")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int("6:")
ValueError: invalid literal for int() with base 10: '6:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:06) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))
print(min(a,b,c))
print(a+b+c-min(a,b,c)-max(a,b,c))
-- OUTPUT:
-2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:01:15) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))
print(min(a,b,c))
print(a+b+c-min(a,b,c)-max(a,b,c))
-- EXECUTION TIME:
0.200442
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:40) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))
print(min(a,b,c))
print(a+b+c-min(a,b,c)-max(a,b,c))
print(max(a,b,c))
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:01:44) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))
print(min(a,b,c))
print(a+b+c-min(a,b,c)-max(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.189254
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
